# yaucca

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: letta-memory.md
.github/workflows/: publish.yml
docs/: architecture.md  design-context-aware-sessionstart.md  design-gitops-deployment.md  design-notifications.md  design-procedural-memory.md  design-v2-cloud-native.md  design-web-ui.md  modal-deployment-plan.md
scripts/: install.sh  release.sh  setup.sh  teardown.sh
src/yaucca/: __init__.py  __main__.py  config.py  deploy.py  deploy_secrets.py  hooks.py  install.py  letta_utils.py  mcp_server.py  prompt.py  setup_agent.py
src/yaucca/cloud/: __init__.py  backfill.py  db.py  embed.py  embed_queue.py  mcp_remote.py  migrate.py  modal_app.py  oauth_provider.py  server.py
src/yaucca/templates/: memory-rules.md
tests/: conftest.py  test_cloud_server.py  test_config.py  test_db.py  test_hooks.py  test_install.py  test_integration.py  test_letta_utils.py  test_mcp_remote.py  test_mcp_server.py  test_oauth_provider.py  test_prompt.py
