[project]
name = "yaucca"
version = "0.3.0"
description = "Persistent long-term memory for Claude Code — cloud-native with SQLite + Modal"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Jake Mannix", email = "jake.mannix@gmail.com" }
]
keywords = ["ai", "claude-code", "memory", "mcp", "modal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# Server + deployment: everything to deploy your own yaucca backend on Modal
deploy = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "mcp>=1.25.0",
    "sse-starlette>=2.0.0",
    "sqlite-vec>=0.1.0",
    "modal>=0.64.0",
    "python-dotenv>=0.21.0",
]
# Development: deploy deps + test/lint tools
dev = [
    "yaucca[deploy]",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
yaucca-deploy = "yaucca.deploy:main"
yaucca-install = "yaucca.install:main"
yaucca-deploy-secrets = "yaucca.deploy_secrets:main"

[project.urls]
Homepage = "https://github.com/jakemannix/yaucca"
Repository = "https://github.com/jakemannix/yaucca"
Issues = "https://github.com/jakemannix/yaucca/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yaucca"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["yaucca"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a running yaucca cloud server",
]
